; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_memcontrol.c_mem_cgroup_force_empty_write.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_memcontrol.c_mem_cgroup_force_empty_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kernfs_open_file = type { i32 }
%struct.mem_cgroup = type { i32 }

@EINVAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.kernfs_open_file*, i8*, i64, i32)* @mem_cgroup_force_empty_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mem_cgroup_force_empty_write(%struct.kernfs_open_file* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.kernfs_open_file*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.mem_cgroup*, align 8
  store %struct.kernfs_open_file* %0, %struct.kernfs_open_file** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load %struct.kernfs_open_file*, %struct.kernfs_open_file** %6, align 8
  %12 = call i32 @of_css(%struct.kernfs_open_file* %11)
  %13 = call %struct.mem_cgroup* @mem_cgroup_from_css(i32 %12)
  store %struct.mem_cgroup* %13, %struct.mem_cgroup** %10, align 8
  %14 = load %struct.mem_cgroup*, %struct.mem_cgroup** %10, align 8
  %15 = call i64 @mem_cgroup_is_root(%struct.mem_cgroup* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %4
  %18 = load i64, i64* @EINVAL, align 8
  %19 = sub i64 0, %18
  store i64 %19, i64* %5, align 8
  br label %29

20:                                               ; preds = %4
  %21 = load %struct.mem_cgroup*, %struct.mem_cgroup** %10, align 8
  %22 = call i64 @mem_cgroup_force_empty(%struct.mem_cgroup* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  br label %27

25:                                               ; preds = %20
  %26 = load i64, i64* %8, align 8
  br label %27

27:                                               ; preds = %25, %24
  %28 = phi i64 [ %22, %24 ], [ %26, %25 ]
  store i64 %28, i64* %5, align 8
  br label %29

29:                                               ; preds = %27, %17
  %30 = load i64, i64* %5, align 8
  ret i64 %30
}

declare dso_local %struct.mem_cgroup* @mem_cgroup_from_css(i32) #1

declare dso_local i32 @of_css(%struct.kernfs_open_file*) #1

declare dso_local i64 @mem_cgroup_is_root(%struct.mem_cgroup*) #1

declare dso_local i64 @mem_cgroup_force_empty(%struct.mem_cgroup*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
